--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -1,6 +1,7 @@
 ; ERREURS
 ERROR_EXCEPTION_SITE_UNKNOWN;Le site que vous essayez d'atteindre n'existe pas.
 ERROR_EXCEPTION_INVALIDARGUMENT;ERREUR TECHNIQUE : L'entity n'est pas correcte
+ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME;La propriété demandée n'existe pas
 
 ; MENU
 GLOBAL_MENU_HOME;Accueil
