--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -1,23 +1,35 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8"
-msgid ""
-msgstr " ERREURS"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: Alec <aroybase@hotmail.fr>\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 msgid "ERROR_EXCEPTION_SITE_UNKNOWN"
 msgstr "Le site que vous essayez d'atteindre n'existe pas."
+
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT"
 msgstr "ERREUR TECHNIQUE : L'entity n'est pas correcte"
-msgid ""
-msgstr " MENU"
+
 msgid "GLOBAL_MENU_HOME"
 msgstr "Accueil"
+
 msgid "GLOBAL_MENU_CHAMBRES"
-msgstr "Chambres d'hÃ´tes"
+msgstr "Chambres d'hôtes"
+
 msgid "GLOBAL_MENU_GITE"
 msgstr "Chalet de montagne"
+
 msgid "GLOBAL_MENU_NEWS"
-msgstr "ActualitÃ©s"
+msgstr "Actualités"
+
 msgid "GLOBAL_MENU_ACTIVITIES"
-msgstr "ActivitÃ©s"
+msgstr "Activités"
+
 msgid "GLOBAL_MENU_CONTACT"
 msgstr "Reservations"
+
