--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -17,12 +17,25 @@ GLOBAL_MENU_DECONNEXION;Se déconnecter
 ;Global
 GLOBAL_OUI;Oui
 GLOBAL_NON;Non
+GLOBAL_AUCUNE;Aucune
 GLOBAL_FORM_ENVOYER;Envoyer
 GLOBAL_FORM_CONFIRMER;Confirmer
 GLOBAL_FORM_VALIDER;Valider
 GLOBAL_FORM_SUBMIT;Enregistrer
 GLOBAL_LANGUAGETOGGLER_LABEL;Changer la langue d'édition
 GLOBAL_HEADER_TITLE;Luchon Location Vances
+GLOBAL_MONTH_LABEL01;Janvier
+GLOBAL_MONTH_LABEL02;Février
+GLOBAL_MONTH_LABEL03;Mars
+GLOBAL_MONTH_LABEL04;Avril
+GLOBAL_MONTH_LABEL05;Mail
+GLOBAL_MONTH_LABEL06;Juin
+GLOBAL_MONTH_LABEL07;Juillet
+GLOBAL_MONTH_LABEL08;Août
+GLOBAL_MONTH_LABEL09;Septembre
+GLOBAL_MONTH_LABEL10;Octobre
+GLOBAL_MONTH_LABEL11;Novembre
+GLOBAL_MONTH_LABEL12;Décembre
 
 ;Global Admin
 GLOBAL_ADMIN_ADD;Ajouter un élément
@@ -31,6 +44,13 @@ GLOBAL_ADMIN_DELETE;Supprimer un élément
 GLOBAL_ADMIN_DELETE_CONFIRM;Êtes-vous sûr de vouloir supprimer cet élément ?
 GLOBAL_ADMIN_UP;Remonter l'élément
 GLOBAL_ADMIN_DOWN;Descendre l'élément
+GLOBAL_ADMIN_ONLINE;Mettre en ligne
+GLOBAL_ADMIN_OFFLINE;Mettre hors ligne
+GLOBAL_ADMIN_LIST_APERCU;Aperçu
+GLOBAL_ADMIN_LIST_DATE_AJOUT;Ajouté le
+GLOBAL_ADMIN_LIST_DATE_MODIFICATION;Modifié le
+GLOBAL_ADMIN_LIST_DATE_SUPPRESSION;Supprimé le
+GLOBAL_ADMIN_LIST_ACTIONS;Actions
 
 ; Homepage
 HOME_TITRE;Qui sommes-nous ?
@@ -58,3 +78,7 @@ HOME_PAGECMS_EDIT_CONTENT_LABEL;Contenu
 ;Carrousel Admin
 HOME_CARROUSEL_TITLE;Edition des images du carrousel
 HOME_CARROUSEL_FILE_LABEL;Nouveau fichier
+HOME_CARROUSEL_LIST_ID;#
+HOME_CARROUSEL_LIST_ORIGINALFILENAME;Nom du fichier
+HOME_CARROUSEL_LIST_TYPE;Type
+HOME_CARROUSEL_LIST_ONLINE;Fichier en ligne ?
