UI + Suppression logique d'élément du carrousel

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -81,4 +81,4 @@ HOME_CARROUSEL_FILE_LABEL;Nouveau fichier
 HOME_CARROUSEL_LIST_ID;#
 HOME_CARROUSEL_LIST_ORIGINALFILENAME;Nom du fichier
 HOME_CARROUSEL_LIST_TYPE;Type
-HOME_CARROUSEL_LIST_ONLINE;Fichier en ligne ?
+HOME_CARROUSEL_LIST_ONLINE;En ligne ?
