--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -6,7 +6,7 @@ msgstr ""
 "Last-Translator: Alec <aroybase@hotmail.fr>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "ERROR_EXCEPTION_SITE_UNKNOWN"
@@ -16,13 +16,10 @@ msgid "ERROR_EXCEPTION_INVALIDARGUMENT"
 msgstr "ERREUR TECHNIQUE : L'entity n'est pas correcte"
 
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME"
-msgstr "La propriété demandée n'existe pas"
+msgstr "La propriÃ©tÃ© demandÃ©e n'existe pas"
 
 msgid "HEAD_TITLE_HOME"
 msgstr "Accueil"
-
-msgid "HEAD_TITLE_CARROUSEL"
-msgstr "Carrousel"
 
 msgid "HEAD_TITLE_PARTNERS"
 msgstr "Partenaires"
@@ -34,28 +31,25 @@ msgid "GLOBAL_MENU_HOME"
 msgstr "Accueil"
 
 msgid "GLOBAL_MENU_CHAMBRES"
-msgstr "Chambres d'hôtes"
+msgstr "Chambres d'hÃ´tes"
 
 msgid "GLOBAL_MENU_GITE"
 msgstr "Chalet de montagne"
 
 msgid "GLOBAL_MENU_NEWS"
-msgstr "Actualités"
+msgstr "ActualitÃ©s"
 
 msgid "GLOBAL_MENU_ACTIVITIES"
-msgstr "Activités"
+msgstr "ActivitÃ©s"
 
 msgid "GLOBAL_MENU_CONTACT"
 msgstr "Reservations"
 
-msgid "GLOBAL_MENU_CARROUSEL"
-msgstr "Carrousel"
-
 msgid "GLOBAL_MENU_PARTNERS"
 msgstr "Partenaires"
 
-msgid "GLOBAL_MENU_DECONNEXION"
-msgstr "Se déconnecter"
+msgid "GLOBAL_HEADER_TITLE"
+msgstr "Luchon Location Vacances"
 
 msgid "GLOBAL_OUI"
 msgstr "Oui"
@@ -78,17 +72,32 @@ msgstr "Valider"
 msgid "GLOBAL_FORM_SUBMIT"
 msgstr "Enregistrer"
 
-msgid "GLOBAL_LANGUAGETOGGLER_LABEL"
-msgstr "Changer la langue d'édition"
+msgid "GLOBAL_COORDONNEES_ADRESSE"
+msgstr "Adresse : 28, avenue de Gascogne - 31 110 Saint Mamet"
 
-msgid "GLOBAL_HEADER_TITLE"
-msgstr "Luchon Location Vacances"
+msgid "GLOBAL_COORDONNEES_TELEPHONE_LABEL"
+msgstr "TÃ©l."
+
+msgid "GLOBAL_COORDONNEES_TELEPHONE"
+msgstr "05 61 89 13 53"
+
+msgid "GLOBAL_COORDONNEES_MOBILE_LABEL"
+msgstr "Mob."
+
+msgid "GLOBAL_COORDONNEES_MOBILE"
+msgstr "06 18 64 14 29"
+
+msgid "FOOTER_COPYRIGHT"
+msgstr "Tous droits reservÃ©sÂ© 2008"
+
+msgid "FOOTER_CREDITS"
+msgstr "RÃ©alisation : <a href=\"http://www.aroy.fr\">Alexandre ROY</a>"
 
 msgid "GLOBAL_MONTH_LABEL01"
 msgstr "Janvier"
 
 msgid "GLOBAL_MONTH_LABEL02"
-msgstr "Février"
+msgstr "FÃ©vrier"
 
 msgid "GLOBAL_MONTH_LABEL03"
 msgstr "Mars"
@@ -106,7 +115,7 @@ msgid "GLOBAL_MONTH_LABEL07"
 msgstr "Juillet"
 
 msgid "GLOBAL_MONTH_LABEL08"
-msgstr "Août"
+msgstr "AoÃ»t"
 
 msgid "GLOBAL_MONTH_LABEL09"
 msgstr "Septembre"
@@ -118,13 +127,13 @@ msgid "GLOBAL_MONTH_LABEL11"
 msgstr "Novembre"
 
 msgid "GLOBAL_MONTH_LABEL12"
-msgstr "Décembre"
+msgstr "DÃ©cembre"
 
 msgid "GLOBAL_MONTH_LABEL_SHORT01"
 msgstr "Jan"
 
 msgid "GLOBAL_MONTH_LABEL_SHORT02"
-msgstr "Fév"
+msgstr "FÃ©v"
 
 msgid "GLOBAL_MONTH_LABEL_SHORT03"
 msgstr "Mars"
@@ -142,7 +151,7 @@ msgid "GLOBAL_MONTH_LABEL_SHORT07"
 msgstr "Juil"
 
 msgid "GLOBAL_MONTH_LABEL_SHORT08"
-msgstr "Août"
+msgstr "AoÃ»t"
 
 msgid "GLOBAL_MONTH_LABEL_SHORT09"
 msgstr "Sept"
@@ -154,7 +163,7 @@ msgid "GLOBAL_MONTH_LABEL_SHORT11"
 msgstr "Nov"
 
 msgid "GLOBAL_MONTH_LABEL_SHORT12"
-msgstr "Déc"
+msgstr "DÃ©c"
 
 msgid "GLOBAL_DAY_LABEL0"
 msgstr "Dimanche"
@@ -202,7 +211,7 @@ msgid "GLOBAL_DATEPICKER_CLOSETEXT"
 msgstr "Terminer"
 
 msgid "GLOBAL_DATEPICKER_PREVIOUS"
-msgstr "Précédent"
+msgstr "PrÃ©cÃ©dent"
 
 msgid "GLOBAL_DATEPICKER_NEXT"
 msgstr "Suivant"
@@ -219,23 +228,44 @@ msgstr "dd/mm/yy"
 msgid "GLOBAL_DATEPICKER_FIRSTDAY"
 msgstr "1"
 
+msgid "HOME_NEWS_TITRE"
+msgstr "DerniÃ¨res nouvelles"
+
+msgid "HOME_NEWS_TITRE2"
+msgstr "What's Lorem Ipsum ?"
+
+msgid "HOME_NEWS_CONTENU"
+msgstr "There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc."
+
+msgid "HOME_NEWS_MORE"
+msgstr "Autres actualitÃ©s"
+
+msgid "HOME_ACTIVITY_TITRE"
+msgstr "ActivitÃ© au hasard"
+
+msgid "HOME_ACTIVITY_MORE"
+msgstr "Autres activitÃ©s"
+
+msgid "â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢ ADMINISTRATION â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢"
+msgstr "inutile de traduire"
+
 msgid "GLOBAL_ADMIN_ADD"
-msgstr "Ajouter un élément"
+msgstr "Ajouter un Ã©lÃ©ment"
 
 msgid "GLOBAL_ADMIN_UPDATE"
-msgstr "Modifier un élément"
+msgstr "Modifier un Ã©lÃ©ment"
 
 msgid "GLOBAL_ADMIN_DELETE"
-msgstr "Supprimer un élément"
+msgstr "Supprimer un Ã©lÃ©ment"
 
 msgid "GLOBAL_ADMIN_DELETE_CONFIRM"
-msgstr "Êtes-vous sûr de vouloir supprimer cet élément ?"
+msgstr "ÃŠtes-vous sÃ»r de vouloir supprimer cet Ã©lÃ©ment ?"
 
 msgid "GLOBAL_ADMIN_UP"
-msgstr "Remonter l'élément"
+msgstr "Remonter l'Ã©lÃ©ment"
 
 msgid "GLOBAL_ADMIN_DOWN"
-msgstr "Descendre l'élément"
+msgstr "Descendre l'Ã©lÃ©ment"
 
 msgid "GLOBAL_ADMIN_ONLINE"
 msgstr "Mettre en ligne"
@@ -244,34 +274,43 @@ msgid "GLOBAL_ADMIN_OFFLINE"
 msgstr "Mettre hors ligne"
 
 msgid "GLOBAL_ADMIN_LIST_APERCU"
-msgstr "Aperçu"
+msgstr "AperÃ§u"
 
 msgid "GLOBAL_ADMIN_LIST_DATE_AJOUT"
-msgstr "Ajouté le"
+msgstr "AjoutÃ© le"
 
 msgid "GLOBAL_ADMIN_LIST_DATE_MODIFICATION"
-msgstr "Modifié le"
+msgstr "ModifiÃ© le"
 
 msgid "GLOBAL_ADMIN_LIST_DATE_SUPPRESSION"
-msgstr "Supprimé le"
+msgstr "SupprimÃ© le"
 
 msgid "GLOBAL_ADMIN_LIST_ACTIONS"
 msgstr "Actions"
 
-msgid "HOME_NEWS_TITRE"
-msgstr "Dernières nouvelles"
+msgid "GLOBAL_LANGUAGETOGGLER_LABEL"
+msgstr "Changer la langue d'Ã©dition"
 
-msgid "HOME_NEWS_TITRE_NEWS_TITRE"
-msgstr "What's Lorem Ipsum ?"
+msgid "GLOBAL_MODAL_DELETE_TEXT"
+msgstr "Vous Ãªtes sur le point de supprimer un Ã©lÃ©ment. Confirmez vous cette suppression ?"
 
-msgid "HOME_NEWS_TITRE_NEWS_CONTENU"
-msgstr "There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc."
+msgid "GLOBAL_MODAL_DELETE_CONFIRM"
+msgstr "Confirmer"
 
-msgid "HOME_NEWS_TITRE_NEWS_MORE"
-msgstr "Autres actualités"
+msgid "GLOBAL_MODAL_DELETE_CANCEL"
+msgstr "Annuler"
+
+msgid "GLOBAL_MENU_CARROUSEL"
+msgstr "Carrousel"
+
+msgid "HEAD_TITLE_CARROUSEL"
+msgstr "Carrousel"
+
+msgid "GLOBAL_MENU_DECONNEXION"
+msgstr "Se dÃ©connecter"
 
 msgid "HOME_LOGIN_TITLE"
-msgstr "Connexion à l'interface d'administration"
+msgstr "Connexion Ã  l'interface d'administration"
 
 msgid "HOME_LOGIN_FORM_LOGIN_LABEL"
 msgstr "Identifiant"
