--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -2,6 +2,7 @@
 ERROR_EXCEPTION_SITE_UNKNOWN;Le site que vous essayez d'atteindre n'existe pas.
 ERROR_EXCEPTION_INVALIDARGUMENT;ERREUR TECHNIQUE : L'entity n'est pas correcte
 ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME;La propriété demandée n'existe pas
+ERROR_DB_CONNECTION;Erreur lors de la connexion à la base de données
 
 ; Head
 HEAD_TITLE_HOME;Accueil
@@ -90,6 +91,13 @@ HOME_NEWS_CONTENU;There are many variations of passages of Lorem Ipsum available
 HOME_NEWS_MORE;Autres actualités
 HOME_ACTIVITY_TITRE;Activité au hasard
 HOME_ACTIVITY_MORE;Autres activités
+
+; News
+HEAD_TITLE_NEWS;Actualités
+NEWS_TITLE;Actualités
+NEWS_LIST_TITRE;Titre
+NEWS_LIST_CATEGORIE;Catégorie
+NEWS_LIST_ONLINE;En ligne ?
 
 
 •••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
