Ajout des éléments pour les news

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -27,6 +27,7 @@ GLOBAL_FORM_ENVOYER;Envoyer
 GLOBAL_FORM_CONFIRMER;Confirmer
 GLOBAL_FORM_VALIDER;Valider
 GLOBAL_FORM_SUBMIT;Enregistrer
+GLOBAL_FORM_SUBMIT_QUIT;Enregistrer & quitter
 GLOBAL_COORDONNEES_ADRESSE;Adresse : 28, avenue de Gascogne - 31 110 Saint Mamet
 GLOBAL_COORDONNEES_TELEPHONE_LABEL;Tél.
 GLOBAL_COORDONNEES_TELEPHONE;05 61 89 13 53
@@ -96,8 +97,16 @@ HOME_ACTIVITY_MORE;Autres activités
 HEAD_TITLE_NEWS;Actualités
 NEWS_TITLE;Actualités
 NEWS_LIST_TITRE;Titre
+NEWS_EDIT_TABS_CONTENT;Contenus
+NEWS_EDIT_TABS_PICTURES;Illustrations
 NEWS_LIST_CATEGORIE;Catégorie
 NEWS_LIST_ONLINE;En ligne ?
+NEWS_EDIT_TITLE;Édition de news
+NEWS_CATEGORY_LABEL;Catégorie
+NEWS_EDIT_TITLE_LABEL;Titre
+NEWS_EDIT_CONTENT_LABEL;Contenu
+NEWS_EDIT_LINK_LABEL;Lien
+NEWS_EDIT_LOCATION_LABEL;Coordonnées GPS
 
 
 •••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
@@ -130,13 +139,13 @@ HOME_LOGIN_TITLE;Connexion à l'interface d'administration
 HOME_LOGIN_FORM_LOGIN_LABEL;Identifiant
 HOME_LOGIN_FORM_PASSWORD_LABEL;Mot de passe
 HOME_LOGIN_FORM_SUBMIT_LABEL;Se connecter
-HOME_PAGECMS_HOME_TITLE;Edition de la page d'accueil
-HOME_PAGECMS_PARTNERS_TITLE;Edition de la page partenaires
+HOME_PAGECMS_HOME_TITLE;Édition de la page d'accueil
+HOME_PAGECMS_PARTNERS_TITLE;Édition de la page partenaires
 HOME_PAGECMS_EDIT_TITLE_LABEL;Titre
 HOME_PAGECMS_EDIT_CONTENT_LABEL;Contenu
 
 ; Carrousel Admin
-HOME_CARROUSEL_TITLE;Edition des images du carrousel
+HOME_CARROUSEL_TITLE;Édition des images du carrousel
 HOME_CARROUSEL_FILE_LABEL;Nouveau fichier
 HOME_CARROUSEL_LIST_ID;#
 HOME_CARROUSEL_LIST_ORIGINALFILENAME;Nom du fichier
