--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -33,6 +33,7 @@ GLOBAL_COORDONNEES_TELEPHONE_LABEL;Tél.
 GLOBAL_COORDONNEES_TELEPHONE;05 61 89 13 53
 GLOBAL_COORDONNEES_MOBILE_LABEL;Mob.
 GLOBAL_COORDONNEES_MOBILE;06 18 64 14 29
+GLOBAL_BACK;Retour
 
 ; Footer
 FOOTER_COPYRIGHT;Tous droits reservés© 2008
@@ -95,7 +96,7 @@ HOME_ACTIVITY_MORE;Autres activités
 
 ; News
 HEAD_TITLE_NEWS;Actualités
-NEWS_TITLE;Actualités
+NEWS_LIST_TITLE;Actualités
 NEWS_LIST_TITRE;Titre
 NEWS_EDIT_TABS_CONTENT;Contenus
 NEWS_EDIT_TABS_PICTURES;Illustrations
@@ -107,6 +108,7 @@ NEWS_EDIT_TITLE_LABEL;Titre
 NEWS_EDIT_CONTENT_LABEL;Contenu
 NEWS_EDIT_LINK_LABEL;Lien
 NEWS_EDIT_LOCATION_LABEL;Coordonnées GPS
+NEWS_ELEMENT_ILLUSTRATION;Galerie photo
 
 
 •••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
