--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -8,6 +8,9 @@ ERROR_DB_CONNECTION;Erreur lors de la connexion à la base de données
 HEAD_TITLE_HOME;Accueil
 HEAD_TITLE_PARTNERS;Partenaires
 HEAD_TITLE_CONNECTION;Connexion
+HEAD_TITLE_NEWS;Actualités
+HEAD_TITLE_ACTIVITY;Activités
+HEAD_TITLE_ERROR;ERREUR
 
 ; Menu
 GLOBAL_MENU_HOME;Accueil
@@ -88,14 +91,11 @@ GLOBAL_DATEPICKER_FIRSTDAY;1
 
 ; Homepage
 HOME_NEWS_TITRE;Dernières nouvelles
-HOME_NEWS_TITRE2;What's Lorem Ipsum ?
-HOME_NEWS_CONTENU;There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
 HOME_NEWS_MORE;Autres actualités
 HOME_ACTIVITY_TITRE;Activité au hasard
 HOME_ACTIVITY_MORE;Autres activités
 
 ; News
-HEAD_TITLE_NEWS;Actualités
 NEWS_LIST_TITLE;Actualités
 NEWS_LIST_TITRE;Titre
 NEWS_EDIT_TABS_CONTENT;Contenus
@@ -110,8 +110,23 @@ NEWS_EDIT_LINK_LABEL;Lien
 NEWS_EDIT_LOCATION_LABEL;Coordonnées GPS
 NEWS_ELEMENT_ILLUSTRATION;Galerie photo
 
+; Activités
+ACTIVITY_LIST_TITLE;Activités
+ACTIVITY_LIST_TITRE;Titre
+ACTIVITY_EDIT_TABS_CONTENT;Contenus
+ACTIVITY_EDIT_TABS_PICTURES;Illustrations
+ACTIVITY_LIST_CATEGORIE;Catégorie
+ACTIVITY_LIST_ONLINE;En ligne ?
+ACTIVITY_EDIT_TITLE;Édition de l'activité
+ACTIVITY_CATEGORY_LABEL;Catégorie
+ACTIVITY_EDIT_TITLE_LABEL;Titre
+ACTIVITY_EDIT_CONTENT_LABEL;Contenu
+ACTIVITY_EDIT_LINK_LABEL;Lien
+ACTIVITY_EDIT_LOCATION_LABEL;Coordonnées GPS
+ACTIVITY_ELEMENT_ILLUSTRATION;Galerie photo
 
-•••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
+
+;•••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
 ; Global Admin
 GLOBAL_ADMIN_ADD;Ajouter un élément
 GLOBAL_ADMIN_UPDATE;Modifier un élément
