Gestion du masquage des news et activities quand elles ne sont pas traduite dans la langue courante

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -109,6 +109,7 @@ NEWS_EDIT_CONTENT_LABEL;Contenu
 NEWS_EDIT_LINK_LABEL;Lien
 NEWS_EDIT_LOCATION_LABEL;Coordonnées GPS
 NEWS_ELEMENT_ILLUSTRATION;Galerie photo
+NEWS_LIST_NORESULT;Il n'y a aucune actualité
 
 ; Activités
 ACTIVITY_LIST_TITLE;Activités
@@ -124,6 +125,7 @@ ACTIVITY_EDIT_CONTENT_LABEL;Contenu
 ACTIVITY_EDIT_LINK_LABEL;Lien
 ACTIVITY_EDIT_LOCATION_LABEL;Coordonnées GPS
 ACTIVITY_ELEMENT_ILLUSTRATION;Galerie photo
+ACTIVITY_LIST_NORESULT;Il n'y a aucune activité
 
 
 ;•••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
